--- a/styles/bootstrap-mod.css
+++ b/styles/bootstrap-mod.css
@@ -15,3 +15,14 @@ h4{
   margin-top: 2rem;
   margin-bottom: 1rem;
 }
+
+.jumbotron{
+  background-color: whitesmoke;
+  border-radius: 1rem;
+}
+
+@media (min-width: 768px) {
+  .border-md-right{
+    border-right: 1px solid #dee2e6 !important;
+  }
+ }
